# global-chat-ms

./: Cargo.toml  Secrets.dev.toml  Shuttle.toml
.github/workflows/: rust.yml
proto/: authentication.proto
src/: lib.rs  main.rs
src/connection/: connection.rs
src/core/: location.rs  message_transit.rs  mod.rs  pubsub.rs  reset.rs
src/models/: message_model.rs  mod.rs  pub_sub_model.rs
src/routes/: mod.rs  web_scoket.rs
src/utils/: app_state.rs  mod.rs
src/utils/failovers/: retry.rs
src/utils/grpc_errors/: grpc_error.rs  mod.rs
