[package]
name = "global-ms"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["ws", "macros"] }
redis = "0.25.0"
bb8-redis = "0.15.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5.0", features = ["cors"] }
tower = {version = "*"}
tokio-tungstenite = "0.21.0"
futures = "0.3.30"
futures-util = { version = "0.3.30", features = ["sink"] }
futures-retry = "0.6.0"
tokio-retry = "0.3.0"
shuttle-runtime = "0.45.0"
shuttle-axum = "0.45.0"
shuttle-secrets = "0.42.0"
geohash = "0.13.0"
socketioxide = { version = "0.13.1", features = ["state"] }

[build-dependencies]

